@@ -1,3 +1,13 @@
+2009-12-09  Raphael 'kena' Poss  <r.c.poss@uva.nl>
+
+	Minor `slr' improvements.
+
+	* tools/lib/r-mt-sim.sh.in: Pass -d to simulator when `slr -t' is
+	used. Move profile listing code to ...
+
+	* tools/bin/slr.in: ... here. Also output command line with -t. Do
+	not require a valid program with -m list.
+
 2009-12-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>
 
 	Minor packaging fix.
